Add deployment automation script and instructions

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
                         <li><a href="#domains">Domains</a></li>
                         <li><a href="#cases">Case Studies</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="deployment.html">Deploy Website</a></li>
                     </ul>
                 </div>
                 <div class="footer-social">
