--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="../InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
+                <img src="asseassets/InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
                 <h1>INFERNO MACH</h1>
             </div>
             <nav class="nav">
@@ -257,7 +257,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="../InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
+                    <img src="assets/InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
                     <h3>INFERNO MACH</h3>
                 </div>
                 <div class="footer-links">
@@ -269,7 +269,6 @@
                         <li><a href="#domains">Domains</a></li>
                         <li><a href="#cases">Case Studies</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="deployment.html">Deploy Website</a></li>
                     </ul>
                 </div>
                 <div class="footer-social">
