--- a/measurement-tool.html
+++ b/measurement-tool.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="../InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
+                <img src="assets/InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
                 <h1>INFERNO MACH</h1>
             </div>
             <nav class="nav">
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="../InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
+                    <img src="assets/InfernoMach_Company_Logo.png" alt="INFERNO MACH Logo">
                     <h3>INFERNO MACH</h3>
                 </div>
                 <div class="footer-links">
