--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/success.html">
                         <!-- Hidden fields for Netlify -->
                         <input type="hidden" name="form-name" value="contact">
                         <p style="display: none;">
