--- a/index.html
+++ b/index.html
@@ -223,10 +223,9 @@
                 </div>
                 <div class="contact-form">
                     <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/success.html">
-                        <!-- Hidden fields for Netlify -->
                         <input type="hidden" name="form-name" value="contact">
-                        <p style="display: none;">
-                            <label>Don't fill this out if you're human: <input name="bot-field"></label>
+                        <p class="hidden">
+                            <label>Don't fill this out if you're human: <input name="bot-field" /></label>
                         </p>
                         
                         <div class="form-group">
